name:                servant-basic-auth
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/reouno/servant-basic-auth#readme
license:             BSD3
license-file:        LICENSE
author:              Leo Uno
maintainer:          leouno12@gmail.com
copyright:           2019 Leo Uno
category:            sample
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Authentication
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant
                     , servant-server
                     , text
                     , wai
                     , warp
  default-language:    Haskell2010

executable servant-basic-auth-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-basic-auth
  default-language:    Haskell2010

test-suite servant-basic-auth-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-basic-auth
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/reouno/servant-basic-auth
